# glaucofilho-rinha-de-backend-2024-q1

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: init.sql
pgadmin/: docker-compose.yml
resultados/v_0_2_0/rinhabackendcrebitossimulation-20240223201622556/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
resultados/v_0_2_0/rinhabackendcrebitossimulation-20240223201622556/js/: all_sessions.js  global_stats.json  stats.js  stats.json
resultados/v_1_0_0/rinhabackendcrebitossimulation-20240224113809334/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
resultados/v_1_0_0/rinhabackendcrebitossimulation-20240224113809334/js/: all_sessions.js  global_stats.json  stats.js  stats.json
src/: main.py
src/api/: __init__.py  routers.py
src/api/endpoints/: clientes.py  extrato.py  transacoes.py
src/api/endpoints_validados/: clientes.py  extrato.py  transacoes.py
src/core/: __init__.py  config.py  database.py  debug.py  deps.py
src/models/: __init__.py  clientes.py  transacoes.py
src/queries/: __init__.py  clientes.py  extrato.py  transacoes.py
src/schemas/: __init__.py  clientes.py  exceptions.py  extrato.py  transacoes.py
stress-test/: executar-teste-local.sh
